Revision history for mojo-checkbot

0.26 2011/11/14

0.25 2011/11/14
  - Improved dom analizer to detect embed, frame, iframe and input for src url.
  - Fixed a bug on forms that caused dialogs to appere only once per action url.
  - Changed default ua name
  - Userinfo for authentication are limited to be used on same port.

0.24 2011/11/12
  - Fixed a bug on performance caused by sleep option

0.23 2011/11/11
  - Added form dialog allowing to crawl beyond forms.

0.22 2011/11/10
  - Mojolicious v2.25 bundled
  - Fixed a small bug that ioloop hasn't droped when queue is empty.
  - Added match-for-check and match-for-crawl option.
  - Added Authentication dialog

0.21 2011/10/27
  - Added evacuate option to set interval for temporary file output

0.20 2011/10/27
  - Fixed a bug on sleep option that hasn't block next queue propery

0.19 2011/10/27
  - Added noevacuate option
  - Improved command API

0.18 2011/10/26
  - Fixed oops on test

0.17 2011/10/26
  - Improved status filter on report
  - Reduced undef warnings on detecting lang on windows
  - URLs in stylesheets are also checked
  - Fixed a bug on resolving scheme-less url

0.16 2011/10/26
  - Improved internals
  - Improved documentation

0.15 2011/10/25
  - Reduced cache size
  - Fixed a small bug on resume
  - Reduced memory dissipation

0.14 2011/10/25
  - Fixed a bug on fetching very large report 
  - Script file is moved to mojo root
  - Mojolicious2.10 is bundled

0.13 2011/10/25
  - Redirection with meta tag also detected
  - Redirection is reported as separated requests

0.12 2011/10/24
  - Added resume option
  - Fixed a bug on timeout option

0.11 2011/10/23
  - Fixed a bug on installation

0.10 2011/10/23
  - Fixed some test bugs.
  - Improved documentation.

0.09 2011/10/22
  - Context defaults to dom itself
  - help localized for japanese
  - Improved Report design
  - Improved Internals

0.08 2011/10/22
  - crawling errors are also reported
  - help is written.

0.07 2011/10/21