@@ -1,10 +1,11 @@
 Revision history for mojo-checkbot
 
 0.26 2011/11/14
+  - Reduced form dialog for deeply same forms not to appear twice
 
 0.25 2011/11/14
   - Improved dom analizer to detect embed, frame, iframe and input for src url.
-  - Fixed a bug on forms that caused dialogs to appere only once per action url.
+  - Fixed a bug on forms that caused dialogs to appear only once per action url.
   - Changed default ua name
   - Userinfo for authentication are limited to be used on same port.
 
